SFDC_LD_Packages/objects-layouts/main/default/objects/WorkRamp_Assignment__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <label>Assignee</label>
    <required>true</required>
    <type>Email</type>
</CustomField>