SFDC_LD_Packages/objects-layouts/main/default/objects/WorkRamp_Assignment__c/fields/Assigner__c.field-meta.xml
<CustomField>
    <fullName>Assigner__c</fullName>
    <label>Assigner</label>
    <required>true</required>
    <type>Email</type>
</CustomField>