SFDC_LD_Packages/objects-layouts/main/default/objects/WorkRamp_Assignment__c/fields/EarnedPoints__c.field-meta.xml
<CustomField>
    <fullName>EarnedPoints__c</fullName>
    <label>Earned Points</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>