SFDC_LD_Packages/objects-layouts/main/default/objects/WorkRamp_Assignment__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>IF( WorkRampTrainingType__c = &quot;Challenge&quot;, HYPERLINK(&quot;https://app.workramp.com/admin/challenge_user_assignments/&quot; &amp;WorkRampId__c &amp;&quot;/review&quot;     ,&quot;View Assignment on WorkRamp&quot;),
             IF( WorkRampTrainingType__c = &quot;Guide&quot;    , HYPERLINK(&quot;https://app.workramp.com/admin/guide_assignments/&quot;          &amp;WorkRampId__c &amp;&quot;/submissions&quot;,&quot;View Assignment on WorkRamp&quot;),
                 NULL ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link</label>
    <type>Text</type>
</CustomField>