SFDC_LD_Packages/objects-layouts/main/default/objects/WorkRamp_Assignment__c/fields/MaxPoints__c.field-meta.xml
<CustomField>
    <fullName>MaxPoints__c</fullName>
    <label>Max Points</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>