SFDC_LD_Packages/objects-layouts/main/default/objects/WorkRamp_Assignment__c/fields/Passed__c.field-meta.xml
<CustomField>
    <fullName>Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passed</label>
    <type>Checkbox</type>
</CustomField>