SFDC_LD_Packages/objects-layouts/main/default/objects/WorkRamp_Assignment__c/fields/WorkRampAssigneeName__c.field-meta.xml
<CustomField>
    <fullName>WorkRampAssigneeName__c</fullName>
    <label>Assignee Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>