SFDC_LD_Packages/objects-layouts/main/default/objects/WorkRamp_Assignment__c/fields/WorkRampId__c.field-meta.xml
<CustomField>
    <fullName>WorkRampId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>WorkRamp Id</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>