SFDC_LD_Packages/objects-layouts/main/default/objects/WorkRamp_Assignment__c/fields/WorkRampPathId__c.field-meta.xml
<CustomField>
    <fullName>WorkRampPathId__c</fullName>
    <label>WorkRamp Path Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>