SFDC_LD_Packages/objects-layouts/main/default/objects/WorkRamp_Assignment__c/fields/WorkRampPathName__c.field-meta.xml
<CustomField>
    <fullName>WorkRampPathName__c</fullName>
    <label>WorkRamp Path Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>