SFDC_LD_Packages/objects-layouts/main/default/objects/WorkRamp_Assignment__c/fields/WorkRampTrainingType__c.field-meta.xml
<CustomField>
    <fullName>WorkRampTrainingType__c</fullName>
    <label>WorkRamp Training Type</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>